--- a/css/sub.css
+++ b/css/sub.css
@@ -67,7 +67,7 @@
     /*movie_video*/
     #movie_video .full_inner{
         width:95%;
-        height:92vh;
+        height:0;
         position: absolute;
         left:50%;
         transform: translate(-50%);
@@ -76,33 +76,54 @@
         background-color: #F2FBFF;
         z-index: 1;
         overflow: hidden;
-        /* display:none; */
+        transition: height 0.7s, width 1s;
+        transition-delay: width 1s;
     }
-      #movie_video #player{
+    #movie_video .full_inner.active{
+        height:92vh;
+        width:100%;
+    }
+
+      #movie_video .player_box{
        position: absolute;
-       width:120%;
-       height:110%;
+       width: calc(1920px*0.5);
+       height:calc(1080px*0.5);
        left:50%;
        top:45%;
        transform: translate(-50%, -50%);
+       background-color: #fff;
     }  
-    #movie_video .close{
+    #movie_video #player1{
+        width: 100%;
+        height:100%;
+    }
+    #movie_video  #close{
         position: absolute;
         right:40px;
         top:40px;
         font-size: 9rem;
         color:#00B6FF;
+        cursor: pointer;
+        opacity: 1;
+        transition: all 0.3s;
     }
-    #movie_video .article_title{
-        position: absolute;
+    #movie_video .full_inner .article_title{
         left:50%;
-        top:80%;
+        bottom:0%;
         width:100%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        position: absolute;
         text-align: center;
         color:#333;
         font-size: 5.5em;
-        transform: translate(-50%, -50%);
+        transition:all 0.3s;      
     }
+    #movie_video .full_inner.active .article_title{
+        opacity: 1;
+        bottom:16%;    
+    }
+
     /*movie_profile*/
     #movie_profile .profile_box{
        padding: 56px 25px;
@@ -126,6 +147,7 @@
     }
     #synopsis section{
         display: flex;
+        margin-left:30%;
     }
     .synopsis_box{
         width:450px;
@@ -181,52 +203,100 @@
         margin-top:120px;
         margin-bottom:120px;
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content:center;
     }
-    #scrollbar .line{
+    input[type="range"]{
         position: absolute;
-        top:50%;
-        left:50%;
-        transform: translate(-50%, -50%);
-        width: 98%;
-        height: 5px;
+        appearance: none;
+        display: block;
+        width:98%;
         background-color: #eee;
+        /* background: linear-gradient(to right, red 20%, black 20%); */
+        height: 6px;
+        outline:none;
+        cursor:pointer;
     }
-    #scrollbar .line_progress{
+    input[type="range"]::after{
+        content:'';
         position: absolute;
-        top:50%;
-        left:1%;
-        transform: translateY(-50%);
-        width: 17%;
-        height: 5px;
-        background-color: #00B6FF; 
-        z-index: 1;
+        appearance: none;
+        display: block;
+        width:98%;
+        height: 6px;
+        outline:none;
+        cursor:pointer;
+        padding-top:18px;
+        padding-bottom: 18px;
+        transform: translate(6px, -18px);
+    }
+    input[type="range"]::-webkit-slider-runnable-track{
+        appearance: none;
+        height: 6px;
+    }
+    input[type="range"]::-moz-track{
+        -moz-appearance: none;
+        height: 6px;
+    }
+    input[type="range"]::-ms-tranck{
+        appearance: none;
+        height: 6px;
+    }
+    input[type="range"]::-webkit-slider-thumb{
+        appearance: none;
+        height: 50px;
+        width: 50px;
+        background-color: #fff;
+        border:10px solid #00B6FF;
+        border-radius: 50%;
+        pointer-events:auto;
+        cursor:pointer;
+        margin-top:-22px;
+    }
+    input[type="range"]::-moz-range-thumb{
+        appearance: none;
+        height: 50px;
+        width: 50px;
+        background-color: #fff;
+        border:10px solid #00B6FF;
+        border-radius: 50%;
+        pointer-events:auto;
+        cursor:pointer;
+        margin-top:-22px;
+    }
+    input[type="range"]::-ms-thumb{
+        appearance: none;
+        height: 50px;
+        width: 50px;
+        background-color: #fff;
+        border:10px solid #00B6FF;
+        border-radius: 50%;
+        pointer-events:auto;
+        cursor:pointer;
+        margin-top:-22px;
     }
 
-    #scrollbar .circle_box{
+    .circle_box{
+        width: 98%;
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
-    #scrollbar .circle{
-        width:40px;
-        height: 40px;
+    .circle{
+        width:50px;
+        height: 50px;
         background-color: #eee;
-        border-radius: 40px;
-        z-index: 1;
-        position: relative;
+        border-radius: 50%;
     }
-    #scrollbar .circle::after{
-        position: absolute;
-        content: '';
-        top:50%;
-        left:50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-        width:20px;
-        height:20px;
-        border-radius: 20px;
-        background-color: #fff;
+    .circle.active{
+        background-color: #00B6FF;
     }
-    #scrollbar .circle.active{
+    .circle.small{
+        width:30px;
+        height: 30px;
+    }
+    .circle.small.active{
         background-color: #00B6FF;
     }
 
@@ -239,28 +309,45 @@
         margin: 0 auto;
         text-align: center;
     }
+    .music_box{
+        margin-top:80px;
+        width:1200px;
+        height: 675px;
+        background-color: red;
+        overflow: hidden;
+        border-radius: 20px;
+    }
+    .music_box #music_img{
+        width: 100%;
+        height: 100%;
+    }
+    #music .music_name{
+        width: 100%;
+        text-align: right;
+        padding-top:16px;
+    }
+    .music_box a{
+        display: block;
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        background-color: #fff;
+        border-radius: 50px;
+        bottom:90px;
+        right:40px;
+    }
+    .music_box a:hover > span{
+        color:#00B6FF;
+    }
+    .music_box span{
+        line-height: 50px;
+        margin-left:14px;
+        color:#bbb;
+    }
 
     /*character_box*/
-    #character .inner{
+    #character .full_inner{
         background-color: red;
-    }
-    .character_box{
-        display: flex;
-        width: 100%;
-        height:520px;
-        gap:20px;
-    }
-    .character_box div{
-        width:14%;
-        height:100%;
-        border-radius: 20px;
-        background-color: blue;
-    }
-    .character_box div.showCharacter{
-        flex-grow: 1;
-    }
-    .character_box div:nth-child(1){
-        background:url('../img/sub/');
     }
 
 
@@ -308,11 +395,20 @@
 
     /*image*/
     #image .full_inner{
-        height: 90vh;
+        height: 80vh;
         background: url('../img/sub/image.png');
         margin-top:300px;
-        /* background-attachment:fixed; */
+        background-attachment:fixed;
         background-size: cover;
+        position: relative;
+    }
+    #image p{
+        position: absolute;
+        left:50%;
+        top:50%;
+        transform: translate(-50%,-50%);
+        color: #fff;
+        font-size: 6rem;
     }
     /*footer*/
     footer{
