--- a/css/sub.css
+++ b/css/sub.css
@@ -76,8 +76,6 @@
         background-color: #F2FBFF;
         z-index: 1;
         overflow: hidden;
-        transition: height 0.7s, width 1s;
-        transition-delay: width 1s;
     }
     #movie_video .full_inner.active{
         height:92vh;
@@ -105,8 +103,7 @@
         color:#00B6FF;
         cursor: pointer;
         opacity: 1;
-        transition: all 0.3s;
-    }
+        }
     #movie_video .full_inner .article_title{
         left:50%;
         bottom:0%;
@@ -117,7 +114,7 @@
         text-align: center;
         color:#333;
         font-size: 5.5em;
-        transition:all 0.3s;      
+        
     }
     #movie_video .full_inner.active .article_title{
         opacity: 1;
@@ -302,9 +299,10 @@
 
     /*music*/
     #music .article_category{
-        margin-bottom: 80px;
+        margin-bottom: 100px;
     }
     #music .article_content{
+        padding-top: 0px;
         width:40%;
         margin: 0 auto;
         text-align: center;
@@ -346,12 +344,371 @@
     }
 
     /*character_box*/
+    #character section{
+        /* overflow: hidden; */
+    }
     #character .full_inner{
-        background-color: red;
+        margin-top:150px;
+        background-color: rgba(0, 0, 0, 0.3);
+        height: 1200px;
+        position: relative;
+    }
+    #character .full_inner::before{
+        content:'';
+        background-image: url('../img/sub/character.png');
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        top:0;
+        left:0;
+        z-index:-1;
+        width:100%;
+        height: 100%;
+    }
+    #character .character_box{
+        overflow: hidden;
+    }
+    #character .inner{
+        height: auto;
+    }
+    #character section>div{
+        display: flex;
+        flex-direction: column;
+        gap:60px;
+            position: relative;
+    }
+    #character .article_category{
+       padding-top:200px;
+    }
+    /*basic*/
+         #character section{
+            display: flex;
+            flex-flow: row;
+            justify-content: space-between;
+        }
+        #character .character_box{
+            width: 570px;
+            height: 150px;
+            background-color: #ffff;
+            border-radius: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-left:calc(25px/2);
+            cursor: pointer;
+        }
+        .character_box .main_thumbnail{
+            border-radius: 50%;
+            width: 125px;
+            height: 125px;
+            overflow: hidden;
+        }
+        .character_box .main_thumbnail img{
+            height: 100%;
+            transform: translateX(-20%);
+        }
+        .character_box .actor,
+        .character_box .introduce,
+        .character_box .talk,
+        .character_box .ch_close,
+        .character_box .ch_button,
+        .character_box .sub_thumbnail,
+        .character_box .more,
+        .character_box .short{
+            display: none;
+        }
+        .character_box .name{
+            font-size: 8rem;
+            margin-right: 66px;
+            font-weight: 600;
+        } 
+
+    /*hover*/
+     #character section.second{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        row-gap:30px;
+        height:570px;
+        overflow: hidden;
+        }
+        
+        #character .character_box.second {
+            width: 570px;
+            height: 570px;
+            background-color: #ffff;
+            border-radius: 20px;
+            display: flex;
+            flex-flow: column;
+            align-items: center;
+            justify-content: space-between;
+            cursor: pointer;
+            padding-left: 0px;
+            flex-grow:1;
+            gap:0px;
+            position: relative;
+        }
+        
+        /*other*/
+        #character section>div.second{
+            display: flex;
+            flex-direction: column;
+            gap:0px;
+        }
+        #character .character_box.other {
+            height: 0px;
+        }
+
+    .character_box.second .main_thumbnail{
+        border-radius: 50%;
+        width: 220px;
+        height: 220px;
+        overflow: hidden;
+        position:relative;
+        margin-top:70px;
+    }
+    .character_box.second .ch_left::before{
+        content:'';
+        width:230px;
+        height:230px;
+        border-radius:50%;
+        border: 3px solid #eee;    
+        position: absolute;
+        top:62px;
+        transform:translateX(-7px);
+        z-index:0;
+    }
+    .character_box.second .main_thumbnail img{
+        height: 100%;
+        transform: translateX(-20%);
+    }
+    .character_box.second .actor,
+    .character_box.second .introduce,
+    .character_box.second .talk,
+    .character_box.second .ch_button,
+    .character_box.second .sub_thumbnail{
+        display: none;
+    }
+    .character_box.second .ch_close{
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        border:none;
+        outline: none;
+        position: absolute;
+        top:40px;
+        right:40px;
+        cursor: pointer;
+        display:block;
+    }
+    .character_box.second .ch_close span{
+        font-size: 10rem;
+        line-height: 10rem;
+        text-align: center;
+        color:#bbb;
+    }
+    .character_box.second .ch_close span:hover{
+        color:#00B6FF;
+    }
+    .character_box.second .name{
+        font-size: 12rem;
+        font-weight: 800;
+        margin-bottom:10px;
+        margin-right: 0px;
+    }
+    .character_box.second .short{
+        font-size: 5rem;
+        font-weight: 600;
+        margin-bottom:35px;
+        display: block;
+    }
+    .character_box.second .more{
+        cursor: pointer;
+        border: 2px solid #eee;
+        outline:none;
+        background-color:#eee;
+        padding: 11px 28px;
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 5rem;
+        margin-bottom:70px;
+           display: block;
+    }
+    .character_box.second .more:hover{
+        border: 2px solid #00B6FF;
+    }
+    .character_box.second .ch_right{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    } 
+
+    /*click*/
+    #character .character_box.third{
+        width:1200px;
+        height:760px;
+        background-color: #fff;
+        border-radius: 20px;
+        align-items:normal;
+        transform: translateY(-100px);
+        position:absolute;
+        top:0;
+        z-index:1;
+    }
+
+    .character_box.third .main_thumbnail{
+        border-radius: 10px;
+        width: 100%;
+        height: 366px;
+        overflow: hidden;
+    }
+    .character_box.third .main_thumbnail img{
+        height: 100%;
+        transform:translateX(0px);
+    }
+    .character_box.third .sub_thumbnail{
+        display: flex;
+        width:100%;
+        justify-content: space-between;
+        align-items: center;
+        margin-top:20px;
+    }
+    .character_box.third .sub_thumbnail div{
+        cursor: pointer;
+        width: 184px;
+        height: 184px;
+        overflow: hidden;
+        border-radius: 10px;
+    } 
+    .character_box.third .sub_thumbnail img{
+        height:100%;
+        transform: translateX(-22%);
+    }
+
+    .character_box.third .character_box{
+        position: absolute;
+        top:0;
+    }
+    .character_box.third .ch_left{
+        width:54%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-left:55px;
+    }
+    .character_box.third .ch_right{
+        display: flex;
+        flex-flow: column;
+        align-items: flex-start;
+        width:46%;
+        padding:110px 80px 50px 50px;
+        position: relative;
+    }
+    .character_box.third .name{
+        font-weight: 800;
+        font-size: 12rem;
+        margin-right: 0px;
+    }
+    .character_box.third .actor{
+        padding: 12px 22px;
+        background-color: #eee;
+        border-radius: 50px;
+        font-size: 4rem;
+        margin-top:16px;
+        display: block;
+    }
+    .character_box.third .introduce{
+        font-size: 4rem;
+        margin-top:25px;
+        line-height: 160%;
+        display: block;
+    }
+    .character_box.third .ch_close{
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        border:none;
+        outline: none;
+        position: absolute;
+        top:50px;
+        right:50px;
+        display: block;
+        cursor: pointer;
+    }
+    .character_box.third .ch_close span{
+        font-size: 10rem;
+        line-height: 10rem;
+        text-align: center;
+        color:#bbb;
+    }
+    .character_box.third .ch_close span:hover{
+        color:#00B6FF;
+    }
+    .character_box.third .next,
+    .character_box.third .prev{
+        width: 60px;
+        height: 60px;
+        border-radius: 60px;
+        outline: none;
+        border: 2px solid #bbb;
+        background-color: #fff;
+        cursor: pointer;
+            display: block;
+    }
+    .character_box.third .next span,
+    .character_box.third .prev span{
+        font-size: 8rem;
+        line-height: 8rem;
+        color:#bbb;
+        margin-top:4px;
+        }
+    .character_box.third .next:hover,
+    .character_box.third .prev:hover{
+        border: 2px solid #00B6FF;
+    }
+    .character_box.third .next:hover span,
+    .character_box.third .prev:hover span{
+        color:#00B6FF;
+    }
+    .character_box.third .ch_button{
+        position: absolute;
+        display: flex;
+        gap:40px;
+        right:50px;
+        bottom:50px;
+    }
+    .character_box.third .talk{
+        display:block;
+    }
+    .character_box.third .talk p{
+        position: absolute;
+        font-size: 10rem;
+        padding: 5px 20px 8px;
+        background-color: #00B6FF;
+        color:#fff;
+        margin-top:10px;
+        bottom:35%;
+    }
+    .character_box.third .talk p:nth-of-type(1){
+        left:-30px;
+    }
+    .character_box.third .talk p:nth-of-type(2){
+        bottom:25%;
+        left:60px;
+    } 
+    .character_box.third .more,
+    .character_box.third .short{
+        display:none;
     }
 
 
     /*award*/
+    #award .article_category{
+        margin-bottom: 150px;
+    }
     .award_box{
         width:100%;
         display: flex;
