--- a/css/sub_cellphone.css
+++ b/css/sub_cellphone.css
@@ -799,7 +799,8 @@
     }
     .award_box div{
         width: 45%;
-        height: 176px;
+        height: 0px;
+        padding-top:40%;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
     }
